--- a/index.html
+++ b/index.html
@@ -1071,8 +1071,8 @@
                     <h3 class="project-title">Deadman's Wallet</h3>
                     <p class="project-description">An innovative blockchain-based inheritance system using smart contracts to automate asset transfer upon inactivity. Ensures digital assets are securely passed to beneficiaries according to predefined conditions.</p>
                     <div class="project-links">
-                        <a href="https://github.com/Aiman-Momin/deadmans-wallet" class="project-link" target="_blank">
-                            <i class="fab fa-github"></i> GitHub
+                        <a href="https://aiman-momin.github.io/deadmans-wallet/" class="project-link" target="_blank">
+                            <i class="fab fa-github"></i> Live Demo
                         </a>
                     </div>
                 </div>
@@ -1101,8 +1101,8 @@
                     <h3 class="project-title">Password Generator</h3>
                     <p class="project-description">A secure and user-friendly password generation tool with customizable options for length, character types, and complexity. Built with vanilla JavaScript for maximum compatibility and security.</p>
                     <div class="project-links">
-                        <a href="https://github.com/Aiman-Momin/password-generator" class="project-link" target="_blank">
-                            <i class="fab fa-github"></i> GitHub
+                        <a href="https://aiman-momin.github.io/password-generator/" class="project-link" target="_blank">
+                            <i class="fab fa-github"></i> Live Demo
                         </a>
                     </div>
                 </div>
@@ -1116,8 +1116,8 @@
                     <h3 class="project-title">Rock–Paper–Scissors</h3>
                     <p class="project-description">An engaging browser-based implementation of the classic game with modern UI design, emoji integration, score tracking, and smooth animations. Demonstrates frontend development skills and user experience design.</p>
                     <div class="project-links">
-                        <a href="https://github.com/Aiman-Momin/Rock-Paper-Scissor" class="project-link" target="_blank">
-                            <i class="fab fa-github"></i> GitHub
+                        <a href="https://aiman-momin.github.io/Rock-Paper-Scissor/" class="project-link" target="_blank">
+                            <i class="fab fa-github"></i> Live Demo
                         </a>
                     </div>
                 </div>
@@ -1455,4 +1455,5 @@
         });
     </script>
 </body>
+
 </html>
