--- a/index.html
+++ b/index.html
@@ -1263,7 +1263,7 @@
                 <a href="https://linkedin.com/in/aiman-momin-d11" target="_blank" title="LinkedIn">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="mailto:aiman.momin999@gmail.com" title="Email">
+                <a href="mailto:aimanmomin999@gmail.com" title="Email">
                     <i class="fas fa-envelope"></i>
                 </a>
             </div>
@@ -1280,7 +1280,7 @@
     <div id="emailModal" class="modal">
         <div class="modal-content">
             <h3><i class="fas fa-envelope"></i> Email Address</h3>
-            <p id="emailAddress">aiman.momin999@gmail.com</p>
+            <p id="emailAddress">aimanmomin999@gmail.com</p>
             <div class="modal-buttons">
                 <button class="copy-btn" onclick="copyEmail()">Copy Email</button>
                 <button class="close-btn" onclick="closeModal('emailModal')">Close</button>
@@ -1457,3 +1457,4 @@
 </body>
 
 </html>
+
