--- a/index.html
+++ b/index.html
@@ -938,6 +938,47 @@
                 flex-direction: column;
             }
         }
+        /* Extra Responsive Enhancements */
+            @media (max-width: 600px) {
+                .hero {
+                    padding: 0 0.5rem;
+                }
+                .hero-content {
+                    text-align: center;
+                }
+                .hero-buttons {
+                    flex-direction: column;
+                    gap: 1rem;
+                    align-items: stretch;
+                }
+                .about-card, .education-card, .objectives, .contact-container, .skill-category, .project-card {
+                    padding: 1.5rem;
+                }
+                .section-title {
+                    font-size: 2rem;
+                }
+                .section-header {
+                    margin-bottom: 2rem;
+                }
+                .footer-content {
+                    padding: 0 0.5rem;
+                }
+                .back-to-top {
+                    width: 45px;
+                    height: 45px;
+                    bottom: 15px;
+                    right: 15px;
+                }
+            }
+            @media (max-width: 400px) {
+                .logo {
+                    font-size: 1.2rem;
+                }
+                .btn, .btn-primary, .btn-secondary {
+                    font-size: 0.85rem;
+                    padding: 0.7rem 1.2rem;
+                }
+            }
     </style>
 </head>
 <body>
@@ -1457,4 +1498,5 @@
 </body>
 
 </html>
+
 
