--- a/index.html
+++ b/index.html
@@ -1163,6 +1163,21 @@
                     </div>
                 </div>
             </div>
+
+            <div class="project-card" data-aos="fade-up" data-aos-delay="600">
+                <div class="project-content">
+                    <div class="project-icon">
+                        <i class="fas fa-gamepad"></i>
+                    </div>
+                    <h3 class="project-title">Mock AI Interview Prep Tool</h3>
+                    <p class="project-description">Built a project that is a web app that helps users practice real interview questions, get instant tailored feedback, and track their progress over time</p>
+                    <div class="project-links">
+                        <a href="https://ai-interview-prep-tool-eight.vercel.app/" class="project-link" target="_blank">
+                            <i class="fab fa-github"></i> Live Demo
+                        </a>
+                    </div>
+                </div>
+            </div>
             
             <div class="project-card" data-aos="fade-up" data-aos-delay="700">
                 <div class="project-content">
@@ -1498,5 +1513,6 @@
 </body>
 
 </html>
+
 
 
